<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.administrator.myapplication.SubFragment3"
    android:background="@color/pink">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:orientation="vertical"
        android:background="@drawable/background_login">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:textSize="25dp"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="@drawable/edit_login"
            android:hint="@string/username_msg"/>
        <EditText
            android:id="@+id/passward"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="15dp"
            android:singleLine="true"
            android:background="@drawable/edit_login"
            android:hint="@string/password_msg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="18dp"
                android:text="@string/login_msg"
                android:background="@drawable/background_button"
                android:onClick="onLoginClick"/>
            <Button
                android:id="@+id/signup_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="18dp"
                android:text="@string/signup_msg"
                android:background="@drawable/background_button"
                android:onClick="onLoginClick"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>